--- a/login.html
+++ b/login.html
@@ -12,8 +12,8 @@
     <fieldset class="fieldset">
       <legend class="title">Login</legend>
 
-      <label for="username" class="label label-username">Usuário
-        <input type="text" id="username" name="username" required autocomplete="on" placeholder="Usuário ou e-mail..." class="input">
+      <label for="user" class="label label-username">Usuário
+        <input type="text" id="user" name="user" required autocomplete="on" placeholder="Usuário ou e-mail..." class="input">
       </label>
       
       <label for="password" class="label label-pass">Senha
