--- a/cadastro.html
+++ b/cadastro.html
@@ -10,7 +10,9 @@
 <body>
   <form class="formulario">
     <fieldset class="fieldset">
-      <legend class="title">Cadastre-se</legend>
+      <div class="div-title">
+        <legend class="title">Cadastre-se</legend>
+      </div>
 
       <label for="username" class="label label-username">Usuário
         <input type="text" id="username" name="username" required autocomplete="on" placeholder="Usuário ou e-mail..." class="input">
