--- a/login.html
+++ b/login.html
@@ -10,7 +10,9 @@
 <body>
   <form class="formulario">
     <fieldset class="fieldset">
-      <legend class="title">Login</legend>
+      <div class="div-title">
+        <legend class="title">Login</legend>
+      </div>
 
       <label for="user" class="label label-username">Usuário
         <input type="text" id="user" name="user" required autocomplete="on" placeholder="Usuário ou e-mail..." class="input">
